--- a/frontend/templates/signin.html
+++ b/frontend/templates/signin.html
@@ -6,11 +6,12 @@
 {% if error %}
 <div class="error">{{ error }}</div>
 {% endif %}
-<form action="/signin" method="post">
-    <label for="username">Username:</label>
-    <input type="text" name="username" required>
-    <br>
-    <button type="submit">Sign In</button>
+<form id="signin-form" action="/signin" method="post">
+        <div class="form-group">
+            <label for="username">Username:</label>
+            <input type="text" name="username" required>
+        </div>
+        <button type="submit">Sign In</button>
 </form>
 <p>Don't have an account? <a href="{{ url_for('signup_route') }}">Sign Up</a></p>
 {% endblock %}
