--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -1,4 +1,3 @@
-<!-- templates/base.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,20 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Messagely</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-    <script src="{{ url_for('static', filename='js/chat.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/chat.js') }}" defer></script>
 </head>
 <body>
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            {% if session.get('user_id') %}
-                <span>Logged in as {{ session['username'] }}</span>
-                <a href="{{ url_for('logout') }}">Logout</a>
-            {% else %}
-                <a href="{{ url_for('signin_route') }}">Sign In</a>
-                <a href="{{ url_for('signup_route') }}">Sign Up</a>
-            {% endif %}
-            <div class="ml-auto">
-                <a href="/" class="btn btn-primary">Return to Home</a>
+            <div class="navbar-content">
+                {% if session.get('user_id') %}
+                    <span>Logged in as {{ session['username'] }}</span>
+                    <a href="{{ url_for('logout') }}" class="btn btn-danger btn-sm ml-2">Logout</a>
+                {% else %}
+                    <a href="{{ url_for('signin_route') }}" class="btn btn-primary btn-sm">Sign In</a>
+                    <a href="{{ url_for('signup_route') }}" class="btn btn-secondary btn-sm ml-2">Sign Up</a>
+                {% endif %}
+                <div class="ml-auto">
+                    <a href="/" class="btn btn-primary">Return to Home</a>
+                </div>
             </div>
         </nav>
         {% block content %}
