--- a/frontend/templates/signup.html
+++ b/frontend/templates/signup.html
@@ -6,13 +6,15 @@
 {% if error %}
 <div class="error">{{ error }}</div>
 {% endif %}
-<form action="/signup" method="post">
-    <label for="username">Username:</label>
-    <input type="text" name="username" required>
-    <br>
-    <label for="email">Email:</label>
-    <input type="email" name="email" required>
-    <br>
+<form id="signup-form" action="/signup" method="post">
+    <div class="form-group">
+        <label for="username">Username:</label>
+        <input type="text" name="username" required>
+    </div>
+    <div class="form-group">
+        <label for="email">Email:</label>
+        <input type="text" name="email" required>
+    </div>
     <button type="submit">Sign Up</button>
 </form>
 <p>Already have an account? <a href="{{ url_for('signin_route') }}">Sign In</a></p>
